[package]
name = "tiberius_example"
version = "0.1.0"
authors = ["NobuyasuMasujima <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
tiberius = { git = "https://github.com/prisma/tiberius.git" }
anyhow = "1.0.31"
futures = "0.3.5"
